# mscclpp

./: CMakeLists.txt  changes.diff
apps/vortex/: CMakeLists.txt
apps/vortex/include/: io-sched.h  vortex-util.h
apps/vortex/src/: io-sched.cc  vortex-util.cpp
apps/vortex/test/: CMakeLists.txt  vortex_test.cc
include/mscclpp/: core.hpp  gpu.hpp
src/: connection.cc  context.cc  endpoint.cc  registered_memory.cc
src/include/: connection.hpp  endpoint.hpp  registered_memory.hpp
